# twittier

./: Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
.github/workflows/: release.yml
scripts/: collate-home-dumps.js  pre-commit.sh
src/: args.rs  credentials.rs  error.rs  main.rs  tweet.rs
src/commands/: delete.rs  feed.rs  home.rs  init.rs  like.rs  me.rs  mod.rs  post.rs
src/twitter/: client.rs  mod.rs  response.rs
