[package]
name = "twitter"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Name output binary "tw"
[[bin]]
bench = false
path = "src/main.rs"
name = "tw"

[dependencies]
toml = "0.5"
home = "0.5.3"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
# huh, crates.io says 2.1.0 is latest but I can't get that with cargo run
urlencoding = "1.1.1"
# This works but I don't see any difference and probably would prefer the published version
# urlencoding = { git = "https://github.com/kornelski/rust_urlencoding", branch = "master" }
rust-crypto = "0.2.36"
base64 = "0.13.0"
# https://docs.rs/hmac-sha1/0.1.3/hmacsha1/
# hmac-sha1 = "0.1.3"
# this gives the same result as rust-crypto, so probably gonna stick with this... except need to remove rust-crypto first for this to make sense...
# For some reason cargo can't find it in crates.io using `hmac-sha1 = "0.1.3"` -- https://crates.io/crates/hmac-sha1
# hmac-sha1 = { git = "https://github.com/pantsman0/rust-hmac-sha1", branch = "master" }
