cargo-features = ["strip"]

[package]
name = "twitter"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Name output binary "tw"
[[bin]]
bench = false
path = "src/main.rs"
name = "tw"

[dependencies]
toml = "0.5"
home = "0.5.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.71"
# Using Rust TLS instead of OpenSSL for easier cross-compilation https://github.com/rust-embedded/cross/issues/510
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
urlencoding = "2.1.0"
base64 = "0.13.0"
hmac-sha1 = "0.1.3"

# https://github.com/briansmith/ring/commit/ace62da913f8d90bc45de2d5b216bd282b6f3006
[build-dependencies]
cc = { version = "1.0.69", default-features = false }

# props to https://github.com/johnthagen/min-sized-rust for doing the heavy lifting on these settings
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"